test_suite/tests/ui/remote/enum_getter.stderr
error: #[serde(getter = "...")] is not allowed in an enum
  --> $DIR/enum_getter.rs:11:1
   |
11 | / #[serde(remote = "remote::E")]
12 | | pub enum E {
13 | |     A {
14 | |         #[serde(getter = "get_a")]
15 | |         a: u8,
16 | |     },
17 | | }
   | |_^

error: aborting due to previous error

